# KnowWeave

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_database_baseline.py  0002_us1_files_parsing_chunks.py  0003_us2_retrieval_chat_citations.py  0004_us3_wiki_pages.py  0005_us3_feedback.py  0006_us3_evaluation_samples.py  0007_us3_knowledge_units_tags.py  0008_p1_chunk_embedding.py  0009_p1_wiki_revisions.py  0010_add_config_overrides.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  errors.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  base.py  chat.py  config.py  feedback.py  files.py  knowledge.py  wiki.py
backend/app/providers/: __init__.py  base.py  embedding.py  extraction.py  factory.py  fake_embedding.py  fake_llm.py  qwen.py  storage.py
backend/app/schemas/: chat.py  common.py  evaluation.py  feedback.py  files.py  knowledge_units.py  search.py  tags.py  wiki.py
backend/app/services/: agent_service.py  chat_service.py  chunk_service.py  chunk_strategy.py  curation_service.py  demo_seed_service.py  evaluation_service.py  feedback_service.py  file_service.py  index_service.py  knowledge_unit_service.py  parsing_service.py  search_service.py  tag_service.py  wiki_service.py
backend/tests/api/: test_chat_sse.py  test_chunk_curation.py  test_chunks.py  test_errors.py  test_evaluation_candidates.py  test_feedback.py  (+7 more)
(+158 files in other folders)
